finalizing the project

--- a/a3media-projeto/src/pages/index.astro
+++ b/a3media-projeto/src/pages/index.astro
@@ -84,9 +84,9 @@ const nome = "Luccas Silva";
     </header>
 
     <div class="btn-group">
-      <a class="btn" href="https://github.com/Luccas-Silva" target="_blank">GitHub</a>
-      <a class="btn" href="/paginatemplate1/1">Página Template 1</a>
-      <a class="btn" href="/paginatemplate2/1">Página Template 2</a>
+      <a class="btn" href="https://github.com/Luccas-Silva/A3Media-Teste" target="_blank">GitHub</a>
+      <a class="btn" href="/paginatemplate1/1" target="_blank">Página Template 1</a>
+      <a class="btn" href="/paginatemplate2/1" target="_blank">Página Template 2</a>
     </div>
   </body>
 </html>
